# native_interop.tour

./: .metadata  README.md  pubspec.yaml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/native_interop/: NativeInteropPlugin.kt
example/: .metadata  README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/native_interop_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: native_interop.podspec
ios/Classes/: NativeInteropPlugin.h  NativeInteropPlugin.m  SwiftNativeInteropPlugin.swift  native_add.c  native_async_callback.cpp  native_interop.c  native_sync_callback.cpp
lib/: native_interop.dart
test/: native_interop_test.dart
